syntax = "proto3";

package org.ngbp.libatsc3.middleware.mmt.pb;

message MmtFragmentHeader {
  int32 service_id = 1;
  int32 packet_id = 2;
  int32 sequence_number = 3;
  int32 sample_number = 4;
  int64 presentationUs = 5;
}